@@ -1,3 +1,5 @@
+    - added "once" attribute to php_include (Monte)
+
 Version 2.1.1
 -------------
     - added cycle function. (Monte)
